--- a/CODECRUNCH-HACK.html
+++ b/CODECRUNCH-HACK.html
@@ -622,10 +622,10 @@
     <!-- Flyer & EST. 2025 Section -->
     <div class="flyer-section">
         <div class="flyer-placeholder">
-            <img src="https://github.com/user-attachments/assets/7ebadd9e-ddfe-43c3-a306-5d5de22f67e4" alt="305 Tropical Hacks Flyer">
+            <img src="https://github.com/user-attachments/assets/b8da7f23-5c5e-4c9e-a6ae-2deee94ef7c3" alt="305 Tropical Hacks Flyer 1ST">
         </div>
         <div class="flyer-placeholder">
-            <img src="https://github.com/user-attachments/assets/984f536d-f92c-40a0-8293-e3ab5640a22b" alt="305 Tropical Hacks Flyer">
+            <img src="https://github.com/user-attachments/assets/5de3c9d5-b7a0-4677-ad8c-fa68d21b580f" alt="305 Tropical Hacks Flyer">
         </div>
         <div class="est-container">
             <img src="https://github.com/user-attachments/assets/30568fdc-c31d-4260-8a24-7e62db85451a" alt="Hibiscus Flower" class="hibiscus-top">
@@ -898,7 +898,7 @@
         <!-- Collaborators Container -->
         <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px;">
 
-
+            <!-- 1 🐾 Panther Robotics @ FIU-->
             <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
             onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
             <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="Pride Student Union Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
@@ -909,7 +909,7 @@
         </div>
 
 
-
+        <!-- 2 🔥 National Society of Black Engineers (NSBE)-->
         <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
         onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
         <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="Pride Student Union Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
@@ -919,6 +919,7 @@
         </div>
     </div>
 
+    <!-- 3 🔐 Women in CyberSecurity (WiCyS)-->
     <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
     onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
     <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="Pride Student Union Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
@@ -928,6 +929,7 @@
     </div>
 </div>
 
+ <!-- 4 🌸 SWE FIU (Society of Women Engineers)-->
 <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
 onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
 <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="Pride Student Union Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
@@ -938,61 +940,17 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
 </div>
 
 
+<!-- 5 🚀 Society of Hispanic Professional Engineers (SHPE)-->
 <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
 onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
-<img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="Pride Student Union Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
+<img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="SHPE Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
 <div>
-    <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">🤖 Artificial Intelligence Organization (AIO)</h5>
-    <p style="font-size: 14px; color: #555; margin: 0;">Advancing AI research and education among FIU students.</p>
+    <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">🚀 Society of Hispanic Professional Engineers (SHPE)</h5>
+    <p style="font-size: 14px; color: #555; margin: 0;">Inspiring Hispanic students to pursue STEM careers.</p>
 </div>
 </div>
 
-            <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
-                onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
-                <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="Pride Student Union Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
-                <div>
-                    <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">🌈 Pride Student Union</h5>
-                    <p style="font-size: 14px; color: #555; margin: 0;">Fostering an inclusive space for LGBTQ+ students in STEM.</p>
-                </div>
-            </div>
-
-            <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
-                onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
-                <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="SHPE Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
-                <div>
-                    <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">🚀 Society of Hispanic Professional Engineers (SHPE)</h5>
-                    <p style="font-size: 14px; color: #555; margin: 0;">Inspiring Hispanic students to pursue STEM careers.</p>
-                </div>
-            </div>
-
-            <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
-                onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
-                <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="AIS FIU Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
-                <div>
-                    <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">🌐 AIS FIU (Association for Information Systems)</h5>
-                    <p style="font-size: 14px; color: #555; margin: 0;">Building bridges between students and the professional IT community.</p>
-                </div>
-            </div>
-
-            <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
-                onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
-                <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="SWE FIU Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
-                <div>
-                    <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">🌸 SWE FIU (Society of Women Engineers)</h5>
-                    <p style="font-size: 14px; color: #555; margin: 0;">Empowering women to achieve their full potential in engineering fields.</p>
-                </div>
-            </div>
-
-            <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
-                onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
-                <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="AIO Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
-                <div>
-                    <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">🤖 Artificial Intelligence Organization (AIO)</h5>
-                    <p style="font-size: 14px; color: #555; margin: 0;">Advancing AI research and education among FIU students.</p>
-                </div>
-            </div>
-
-<!-- ALPFA FIU Collaborator Card -->
+<!-- 6 ALPFA FIU Collaborator Card -->
 <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
     onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
     <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="ALPFA FIU Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
@@ -1003,7 +961,61 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
 </div>
 
 
-<!-- Florida Engineering Society (FES FIU) Collaborator Card -->
+
+ <!-- 7 🤖 Artificial Intelligence Organization (AIO)-->
+ <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
+ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
+ <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="Pride Student Union Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
+ <div>
+     <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">🤖 Artificial Intelligence Organization (AIO)</h5>
+     <p style="font-size: 14px; color: #555; margin: 0;">Advancing AI research and education among FIU students.</p>
+ </div>
+ </div>
+
+<!-- 8 🌐 AIS FIU (Association for Information Systems)-->
+<div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
+onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
+<img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="AIS FIU Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
+<div>
+    <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">🌐 AIS FIU (Association for Information Systems)</h5>
+    <p style="font-size: 14px; color: #555; margin: 0;">Building bridges between students and the professional IT community.</p>
+</div>
+</div>
+
+<!-- 9 ERS FIU (Engineers Research Society)-->
+<div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
+onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
+<img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="AIS FIU Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
+<div>
+    <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">🌐 ERS FIU (Engineers Research Society)</h5>
+    <p style="font-size: 14px; color: #555; margin: 0;">Innovating, researching, and bridging the gap between students and the engineering industry.</p>
+</div>
+</div>
+
+<!-- 9 ERS FIU (Engineers Research Society)-->
+<div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
+onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
+<img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="AIS FIU Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
+<div>
+    <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">🌐 ERS FIU (Engineers Research Society)</h5>
+    <p style="font-size: 14px; color: #555; margin: 0;">Innovating, researching, and bridging the gap between students and the engineering industry.</p>
+</div>
+</div>
+
+
+<!-- 10 🌈 Pride Student Union-->
+            <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
+                onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
+                <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="Pride Student Union Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
+                <div>
+                    <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">🌈 Pride Student Union</h5>
+                    <p style="font-size: 14px; color: #555; margin: 0;">Fostering an inclusive space for LGBTQ+ students in STEM.</p>
+                </div>
+            </div>
+
+ 
+ 
+<!-- 11 Florida Engineering Society (FES FIU) Collaborator Card -->
 <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
     onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
     <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="FES FIU Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
@@ -1013,7 +1025,7 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
     </div>
 </div>
 
-<!-- International Business Honors Society (IBHS) Collaborator Card -->
+<!-- 12 International Business Honors Society (IBHS) Collaborator Card -->
 <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
     onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
     <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="IBHS Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
@@ -1023,7 +1035,7 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
     </div>
 </div>
 
-<!-- American Marketing Association (AMA) Collaborator Card -->
+<!-- 13 American Marketing Association (AMA) Collaborator Card -->
 <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
     onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
     <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="AMA Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
@@ -1033,7 +1045,7 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
     </div>
 </div>
 
-<!-- Dean’s Student Advisory Board (DSAB) Collaborator Card -->
+<!-- 14 Dean’s Student Advisory Board (DSAB) Collaborator Card -->
 <div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
     onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
     <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="DSAB Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
@@ -1070,6 +1082,8 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
         <h2 class="fw-bold mb-4">Workshop - Collaborators</h2>
 
         <div class="d-flex justify-content-center">
+            
+            <!-- 15 💻 Women in Computer Science (WiCS) -->
             <!-- Card 4 -->
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100 text-center"> <!-- Center the text -->
