--- a/index.html
+++ b/index.html
@@ -662,27 +662,27 @@
     <!-- First Flyer -->
     <div style="text-align: center; max-width: 300px;">
         <div>
-            <img src="https://github.com/user-attachments/assets/7ebadd9e-ddfe-43c3-a306-5d5de22f67e4" alt="305 Tropical Hacks Flyer" style="width: 100%; height: auto;">
+            <img src="https://github.com/user-attachments/assets/b8da7f23-5c5e-4c9e-a6ae-2deee94ef7c3" alt="305 Tropical Hacks Flyer" style="width: 100%; height: auto;">
         </div>
-        <h3 style="margin-top: 20px; font-size: 18px;">Collaborators</h3>
+        <h3 style="margin-top: 20px; font-size: 18px;">FIU ORGs Collaborators</h3>
         <ul style="text-align: left; padding-left: 20px;">
-            <li>Panther Robotics @ FIU</li>
-            <li>National Society of Black Engineers (NSBE)</li>
-            <li>Women in CyberSecurity (WiCyS)</li>
-            <li>SWE FIU (Society of Women Engineers)</li>
-            <li>Society of Hispanic Professional Engineers (SHPE)</li>
-            <li>ALPFA FIU (Association of Latino Professionals for America)</li>
-            <li>AIS FIU (Association for Information Systems)</li>
-            <li>ERS FIU (Engineers for Real Solutions)</li>
-            <li>Artificial Intelligence Organization (AIO)</li>
-            <li>🌈 Pride Student Union</li>
-            <li>Florida Engineering Society (FES FIU)</li>
-            <li>International Business Honors Society (IBHS)</li>
-            <li>American Marketing Association (AMA)</li>
-            <li>Dean’s Student Advisory Board (DSAB)</li>
-
-            <li>Workshop - Collaborator: Women in Computer Science (WiCS)</li>
-        </ul>
+            <!-- 1--><li>1. Panther Robotics @ FIU</li>
+            <!-- 2--><li>2. National Society of Black Engineers (NSBE)</li>
+            <!-- 3--><li>3. Women in CyberSecurity (WiCyS)</li>
+            <!-- 4--><li>4. SWE FIU (Society of Women Engineers)</li>
+            <!-- 5--><li>5. Society of Hispanic Professional Engineers (SHPE)</li>
+            <!-- 6--><li>6. ALPFA FIU (Association of Latino Professionals for America)</li>
+            <!-- 7--><li>7. Artificial Intelligence Organization (AIO)</li>
+            <!-- 8--><li>8. AIS FIU (Association for Information Systems)</li>
+            <!-- 9--><li>9. ERS FIU (Engineers Research Society)</li>
+            <!-- 10--><li>10. 🌈 Pride Student Union</li>
+            <!-- 11--><li>11. Florida Engineering Society (FES FIU)</li>
+            <!-- 12--><li>12. International Business Honors Society (IBHS)</li>
+            <!-- 13--><li>13. American Marketing Association (AMA)</li>
+            <!-- 14--><li>14. Dean’s Student Advisory Board (DSAB)</li>
+   
+            <!-- 15--><li><li>17. Workshop - Collaborator: Women in Computer Science (WiCS)</li>
+           </ul>
         <div style="margin-top: 15px;">
             <a href="CODECRUNCH-HACK.html" style="display: inline-block; padding: 8px 15px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; font-size: 14px; font-weight: bold;">Get More Info</a>
         </div>
@@ -691,26 +691,26 @@
     <!-- Second Flyer -->
     <div style="text-align: center; max-width: 300px;">
         <div>
-            <img src="https://github.com/user-attachments/assets/984f536d-f92c-40a0-8293-e3ab5640a22b" alt="305 Fall Hacks Flyer 2" style="width: 100%; height: auto;">
+            <img src="https://github.com/user-attachments/assets/5de3c9d5-b7a0-4677-ad8c-fa68d21b580f" alt="305 Fall Hacks Flyer 2" style="width: 100%; height: auto;">
         </div>
-        <h3 style="margin-top: 20px; font-size: 18px;">Collaborators</h3>
+        <h3 style="margin-top: 20px; font-size: 18px;">FIU ORGs Collaborators</h3>
         <ul style="text-align: left; padding-left: 20px;">
-            <li>Panther Robotics @ FIU</li>
-            <li>National Society of Black Engineers (NSBE)</li>
-            <li>Women in CyberSecurity (WiCyS)</li>
-            <li>SWE FIU (Society of Women Engineers)</li>
-            <li>Society of Hispanic Professional Engineers (SHPE)</li>
-            <li>ALPFA FIU (Association of Latino Professionals for America)</li>
-            <li>AIS FIU (Association for Information Systems)</li>
-            <li>ERS FIU (Engineers for Real Solutions)</li>
-            <li>Artificial Intelligence Organization (AIO)</li>
-            <li>🌈 Pride Student Union</li>
-            <li>Florida Engineering Society (FES FIU)</li>
-            <li>International Business Honors Society (IBHS)</li>
-            <li>American Marketing Association (AMA)</li>
-            <li>Dean’s Student Advisory Board (DSAB)</li>
-
-            <li>Workshop - Collaborator: Women in Computer Science (WiCS)</li>
+            <!-- 1--><li>1. Panther Robotics @ FIU</li>
+            <!-- 2--><li>2. National Society of Black Engineers (NSBE)</li>
+            <!-- 3--><li>3. Women in CyberSecurity (WiCyS)</li>
+            <!-- 4--><li>4. SWE FIU (Society of Women Engineers)</li>
+            <!-- 5--><li>5. Society of Hispanic Professional Engineers (SHPE)</li>
+            <!-- 6--><li>6. ALPFA FIU (Association of Latino Professionals for America)</li>
+            <!-- 7--><li>7. Artificial Intelligence Organization (AIO)</li>
+            <!-- 8--><li>8. AIS FIU (Association for Information Systems)</li>
+            <!-- 9--><li>9. ERS FIU (Engineers Research Society)</li>
+            <!-- 10--><li>10. 🌈 Pride Student Union</li>
+            <!-- 11--><li>11. Florida Engineering Society (FES FIU)</li>
+            <!-- 12--><li>12. International Business Honors Society (IBHS)</li>
+            <!-- 13--><li>13. American Marketing Association (AMA)</li>
+            <!-- 14--><li>14. Dean’s Student Advisory Board (DSAB)</li>
+   
+            <!-- 15--><li><li>17. Workshop - Collaborator: Women in Computer Science (WiCS)</li>
         </ul>
         <div style="margin-top: 15px;">
             <a href="all-305-Hackathon25.html" style="display: inline-block; padding: 8px 15px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; font-size: 14px; font-weight: bold;">Get More Info</a>
