--- a/Schedules.html
+++ b/Schedules.html
@@ -264,17 +264,27 @@
     <h1>Code Crunch Weekly Schedule - Spring 2025</h1>
     
     <div class="container px-lg-5 text-center" data-aos="fade-up">
-        <h2 class="fw-bold">Our Weekly Sessions</h2>
-        <ul class="list-group list-group-flush text-start d-inline-block">
-          <li class="list-group-item fs-5"><strong>📅 Wednesdays (5:00 PM - 6:00 PM):</strong> Crunch Portfolio - Hands-on project development & workshops</li>
-          <li class="list-group-item fs-5"><strong>📅 Thursdays (11:00 AM - 12:00 PM):</strong> CrunchTime LeetCode - Master data structures & algorithms</li>
-          <li class="list-group-item fs-5"><strong>📅 Thursdays (5:00 PM - 7:00 PM):</strong> Crunch Lab - Build real-world projects & collaborate</li>
-          <li class="list-group-item fs-5"><strong>🎙 Special Events:</strong> #CrunchConvos - Industry panels & networking (Dates TBD)</li>
-        </ul>
-
+      <h2 class="fw-bold">Workshop Breakdown by Schedule</h2>
+      <ul class="list-group list-group-flush text-start d-inline-block">
+          <li class="list-group-item fs-5"><strong>🔹 C1 | Crunch Convos (Python):</strong> Engaging discussions on Python applications & real-world problem-solving</li>
+          <li class="list-group-item fs-5"><strong>🔹 C2 | Crunch the Code (Python/LeetCode):</strong> Improve problem-solving with Python & LeetCode challenges</li>
+          <li class="list-group-item fs-5"><strong>🔹 C3 | CodeCrunch LABS Portfolio (Java & React):</strong> Develop portfolio-worthy projects in Java & React</li>
+          <li class="list-group-item fs-5"><strong>🔹 C4 | CodeCrunch LABS Hackathon (Java & React):</strong> Hands-on Java & React development in a hackathon-style format</li>
+          <li class="list-group-item fs-5"><strong>🔹 C5 | Crunch AI Data Science (Python):</strong> Dive into machine learning, AI, and data science techniques</li>
+          <li class="list-group-item fs-5"><strong>🔹 C6 | Cybersecurity Crunch (VM/Linux):</strong> Learn ethical hacking, cybersecurity, and Linux-based security practices</li>
+          <li class="list-group-item fs-5"><strong>🔹 C7 | Wire Crunch: Embedded Systems (C++):</strong> Explore embedded systems and hardware programming using C++</li>
+          <li class="list-group-item fs-5"><strong>🔹 C8 | CodeCrunch LABS Web Dev (JavaScript):</strong> Master JavaScript for front-end & full-stack web development</li>
+          <li class="list-group-item fs-5"><strong>🔹 C9 | SWE Convos (Networking):</strong> Exclusive networking sessions with industry software engineers</li>
+          <li class="list-group-item fs-5"><strong>🔹 C10 | Crunching Bioinformatics:</strong> Learn about computational biology and bioinformatics tools</li>
+          <li class="list-group-item fs-5"><strong>🔹 C11 | Crunch Arcade (Unity):</strong> Develop interactive games and simulations using Unity</li>
+          <li class="list-group-item fs-5"><strong>🔹 C12 | Crunch 3D: CAD & Modeling (OnShape):</strong> Hands-on experience with 3D modeling and CAD design</li>
+      </ul>
+      <p class="mt-3 fs-5">Each session provides hands-on learning, collaboration, and expert guidance. Stay engaged and build real-world skills with <strong>Code Crunch @ FIU!</strong> 🚀</p>
+  </div>
+  
     <!-- Sub-section for Schedule -->
     <div class="content-section">
-        <img src="https://github.com/user-attachments/assets/e5fc341b-cc33-497f-8982-6862ff84b6e0" alt="Spring 2025 Schedule" class="img-fluid mx-auto d-block" />
+        <img src="https://github.com/user-attachments/assets/4740839c-8d8c-441b-b9b0-4cdbdf074be6" alt="Spring 2025 Schedule" class="img-fluid mx-auto d-block" />
     </div>
 
     <!-- Sub-section for Event Flyers -->
