--- a/index.html
+++ b/index.html
@@ -470,15 +470,14 @@
 
 
 <section class="content-section" style="display: flex; flex-direction: column; align-items: center; width: 100%; overflow: hidden; padding: 30px;">
-    
-   
 
     <!-- Video Section -->
     <div class="video-section" style="display: flex; flex-direction: column; align-items: center; margin-top: 20px; width: 100%;">
-               <!-- Video 1 -->
-        <div class="video-container" style="margin-bottom: 20px; text-align: center;">
+        <!-- Video 1 -->
+        <div class="video-container" style="margin-bottom: 20px; text-align: center; width: 100%;">
             <h3>Code Crunch Global: A Career Accelerator</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Be44hpTkHA0?rel=0" 
+            <iframe style="width: 100%; max-width: 560px; height: auto; aspect-ratio: 16/9;" 
+                src="https://www.youtube.com/embed/Be44hpTkHA0?rel=0" 
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
         </div>
@@ -487,20 +486,21 @@
 </section>
 
 <section class="content-section" style="display: flex; flex-direction: column; align-items: center; width: 100%; overflow: hidden; padding: 30px;">
-    
+
     <!-- Video Section -->
     <div class="video-section" style="display: flex; flex-direction: column; align-items: center; margin-top: 20px; width: 100%;">
         <!-- Video 2 -->
-        <div class="video-container" style="text-align: center;">
+        <div class="video-container" style="text-align: center; width: 100%;">
             <h3>Breaking Into Tech: The 305 Hackathon Experience | Code Crunch @ FIU 🚀💻</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/xbKAPQtoelk?rel=0" 
+            <iframe style="width: 100%; max-width: 560px; height: auto; aspect-ratio: 16/9;" 
+                src="https://www.youtube.com/embed/xbKAPQtoelk?rel=0" 
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
         </div>
-
     </div>
 
 </section>
+
 
 <section class="content-section" style="width: 100%; padding: 30px; display: flex; justify-content: center;">
     <div style="width: 100%; max-width: 600px; height: 450px; border: 1px solid #bfcbda88; border-radius: 4px; overflow: hidden;">
