--- a/contact.html
+++ b/contact.html
@@ -166,6 +166,11 @@
                     <a href="https://linktr.ee/CODE.CRUNCH" class="btn btn-dark" aria-label="Linktree">
                         <i class="bi bi-link"></i> Linktree
                     </a>
+                        <!-- YouTube Button -->
+                  <a href="https://www.youtube.com/@CODECRUNCH-CS-FIU-EDU" class="btn btn-danger" aria-label="YouTube">
+                    <i class="bi bi-youtube"></i> YouTube
+                </a>
+
                 </div>
                 
                 </div>
