--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
             <!-- 15--><li><li>15. Workshop - Collaborator: Women in Computer Science (WiCS)</li>
         </ul>
         <div style="margin-top: 15px;">
-            <a href="CODECRUNCH-HACK.html" style="display: inline-block; padding: 8px 15px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; font-size: 14px; font-weight: bold;">Register Now</a>
+            <a href="305HACK-SPRING25.html" style="display: inline-block; padding: 8px 15px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; font-size: 14px; font-weight: bold;">Register Now</a>
         </div>
     </div>
 
@@ -797,7 +797,7 @@
             <!-- 15--><li><li>15. Workshop - Collaborator: Women in Computer Science (WiCS)</li>
         </ul>
         <div style="margin-top: 15px;">
-            <a href="all-305-Hackathon25.html" style="display: inline-block; padding: 8px 15px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; font-size: 14px; font-weight: bold;">Register Now</a>
+            <a href="305HACK-FALL25.html" style="display: inline-block; padding: 8px 15px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; font-size: 14px; font-weight: bold;">Register Now</a>
         </div>
     </div>
 </div>
