--- a/about.html
+++ b/about.html
@@ -163,6 +163,10 @@
         <a href="https://www.youtube.com/@CODECRUNCH-CS-FIU-EDU" class="btn btn-danger" aria-label="YouTube">
           <i class="bi bi-youtube"></i> YouTube
       </a>
+          <!-- RESUME BOOK Button -->
+          <a href="https://forms.gle/5JYyN4BEq95vgrG79" class="btn btn-danger" aria-label="Resume Book">
+            <i class="bi bi-youtube"></i> Resume Book
+        </a>
           </div>
         </div>
       </div>
