--- a/Schedules.html
+++ b/Schedules.html
@@ -256,10 +256,11 @@
           <a href="https://www.youtube.com/@CODECRUNCH-CS-FIU-EDU" class="btn btn-danger" aria-label="YouTube">
             <i class="bi bi-youtube"></i> YouTube
         </a>
-          <!-- RESUME BOOK Button -->
-          <a href="https://forms.gle/5JYyN4BEq95vgrG79" class="btn btn-danger" aria-label="Resume Book">
-            <i class="bi bi-youtube"></i> Resume Book
-        </a>        
+        <!-- RESUME BOOK Button -->
+        <a href="https://forms.gle/5JYyN4BEq95vgrG79" class="btn btn-primary" aria-label="Resume Book">
+          <i class="bi bi-journal-text"></i> Resume Book
+        </a>
+    
         </div>
       </div>
     </div>
