--- a/index.html
+++ b/index.html
@@ -417,9 +417,10 @@
                 <i class="bi bi-youtube"></i> YouTube
             </a>
             <!-- RESUME BOOK Button -->
-            <a href="https://forms.gle/5JYyN4BEq95vgrG79" class="btn btn-danger" aria-label="Resume Book">
-                <i class="bi bi-youtube"></i> Resume Book
+            <a href="https://forms.gle/5JYyN4BEq95vgrG79" class="btn btn-primary" aria-label="Resume Book">
+                <i class="bi bi-journal-text"></i> Resume Book
             </a>
+
         </div>
 
         
