--- a/index.html
+++ b/index.html
@@ -875,8 +875,9 @@
     <!-- Join the Code Crunch E-Board Card -->
 <div class="col-lg-6 col-xxl-4 mb-5">
     <div class="card bg-light border-0 h-100">
-        <div class="card-body text-center p-4 p-lg-5">
-            <h2 class="fs-4 fw-bold">Lead, Innovate, and Inspire! 🚀</h2>
+
+        <div class="card-body text-center p-4 p-lg-5"> 
+            <h2 class="fs-4 fw-bold">Join the Code Crunch E-Board - Lead, Innovate, and Inspire! 🚀</h2>
             <p class="mt-3">
                 Join Code Crunch as our <strong>Tech Engagement Chair</strong>—a dynamic role combining technical leadership, event support, and outreach. With just 5 hours a week, you can help shape an inclusive tech community at FIU. Apply now and be the spark that drives innovation! ✨
             </p>
