--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
               <a class="nav-link" href="SWE-CONVOS.html" style="padding:10px 15px;">SWE Convos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="CODECRUNCH-HACK.html" style="padding:10px 15px;">Code Crunch Hackathon</a>
+              <a class="nav-link" href="305HACK-SPRING25.html" style="padding:10px 15px;">305 Hackathon</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="all-eboard.html" style="padding:10px 15px;">E-board</a>
