--- a/Schedules.html
+++ b/Schedules.html
@@ -209,7 +209,7 @@
               <a class="nav-link" href="SWE-CONVOS.html" style="padding:10px 15px;">SWE Convos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="CODECRUNCH-HACK.html" style="padding:10px 15px;">Code Crunch Hackathon</a>
+              <a class="nav-link" href="305HACK-SPRING25.html" style="padding:10px 15px;">305 Hackathon</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="all-eboard.html" style="padding:10px 15px;">E-board</a>
@@ -311,7 +311,7 @@
     <!-- Sub-section for Schedule -->
    
     <div class="content-section">
-        <img src="https://github.com/user-attachments/assets/e1d09405-49cb-46d7-950b-819de55b9521" alt="Fall 2025 Schedule" class="img-fluid mx-auto d-block" />
+        <img src="https://github.com/user-attachments/assets/da613bd5-ee12-40d8-9a85-d7da83c737a5" alt="Fall 2025 Schedule" class="img-fluid mx-auto d-block" />
     </div>
 
     <!-- Sub-section for Event Flyers -->
