--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -1117,12 +1117,13 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
             <a href="#" class="volunteer-btn">Volunteer Form</a> and we'll get back to you!
         </div>
 
-        <!-- Donor Prospectus -->
-        <div class="dashed-box">
-            <p>View our Donor Prospectus:</p>
-            <a href="#" class="prospectus-btn"><i class="fas fa-file-download"></i> PROSPECTUS</a>
-        </div>
-    </div>
+<!-- Donor Prospectus -->
+<div class="dashed-box">
+    <p>View our Donor Prospectus:</p>
+    <a href="assets/305 HACKATHON Spring 2025 Prospectus.pdf" class="prospectus-btn" download>
+        <i class="fas fa-file-download"></i> DOWNLOAD PROSPECTUS
+    </a>
+</div>
 
     <!-- Contributors Section -->
     <div class="container">
