--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -1120,9 +1120,12 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
 <!-- Donor Prospectus -->
 <div class="dashed-box">
     <p>View our Donor Prospectus:</p>
-    <a href="assets/305 HACKATHON Spring 2025 Prospectus.pdf" class="prospectus-btn" download>
-        <i class="fas fa-file-download"></i> DOWNLOAD PROSPECTUS
-    </a>
+    <a href="https://ba-00001.github.io/codecrunchclub/assets/305-HACKATHON-Spring-2025-Prospectus.pdf" 
+    class="prospectus-btn" 
+    download>
+    <i class="fas fa-file-download"></i> Download Prospectus
+ </a>
+ 
 </div>
 
     <!-- Contributors Section -->
