--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -1113,14 +1113,14 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
     <!-- Volunteer Form -->
     <div class="container">
         <div class="dashed-box">
-            <p>If you're interested in working with 305 Hack, or being a mentor or judge for our hackathon, fill out this form:</p>
-            <a href="#" class="volunteer-btn">Volunteer Form</a> and we'll get back to you!
+            <p>If you're interested in working with 305 Hack, or being a mentor, judge, Workshop Hosts or organizer for our hackathon, fill out this form:</p>
+            <a href="https://forms.gle/1MFMiLpzT5GpmMB8A" class="volunteer-btn">Volunteer Form</a> and we'll get back to you!
         </div>
 
 <!-- Donor Prospectus -->
 <div class="dashed-box">
     <p>View our Donor Prospectus:</p>
-    <a href="https://ba-00001.github.io/codecrunchclub/assets/305-HACKATHON-Spring-2025-Prospectus.pdf" 
+    <a href="https://ba-00001.github.io/codecrunchclub/assets/305-HACKATHON-Prospectus.pdf" 
     class="prospectus-btn" 
     download>
     <i class="fas fa-file-download"></i> Download Prospectus
